[package]
name = "axum-anyhow-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
axum = "0.5.5"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
